small boss change (#2673)
* Nicknon changes for bosses

* bugfix to NearbyPlayersTrigger

* bugfix to RemoveAbilityAction